MASTER UPDATE: Canonical links, redirects, placeholder removal, badge exclusivity, Gemi-compliant creators design, Live Verification Mode

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VERTIKAL | Cultural Ownership</title>
+    <link rel="canonical" href="https://vertikalapp.com">
     <style>
     /* VERTIKAL CINEMATIC ENGINE */
     :root {
@@ -117,7 +118,6 @@
             <a href="/creators/">Creators</a>
             <a href="/networks/">Networks</a>
             <a href="/investors/">Investors</a>
-            <a href="/beta/" style="color: #FFD700;">Beta Live</a>
             <a href="#" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;" onclick="event.preventDefault(); document.getElementById('demoModal').classList.add('active');">Watch Live Demo</a>
         </div>
     </nav>
@@ -133,15 +133,27 @@
         </div>
     </header>
 
-    <!-- BLUE BADGE: BUILDERS -->
+    <!-- V BADGE SYSTEM EXPLAINER (ALL BADGES) -->
     <section>
         <div class="container">
-            <h2>THE V BADGE STANDARD</h2>
-            <div class="badge-row" style="border-left: 4px solid var(--blue);">
-                <img src="/assets/badges/creators-badge-blue.jpg" alt="Blue Builder Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
-                <div>
-                    <h3 style="color: var(--blue);">Blue Tier: Builders</h3>
-                    <p style="margin:0;"><strong>The Quality Standard.</strong> Awarded to engineers, operators, and builders who contribute to the Vertikal infrastructure. Signals technical excellence and platform commitment.</p>
+            <h2>THE V BADGE SYSTEM</h2>
+            <p style="color: #fff; font-size: 1.2rem; margin-bottom: 2rem;">The V Badge signals contribution, priority, and access. It is earned, not bought.</p>
+            <div class="grid grid-2">
+                <div class="badge-description-block gold">
+                    <h3 style="color: #FFD700; margin-bottom: 0.5rem;">Gold: Founding 50</h3>
+                    <p style="font-size: 0.95rem;">Visionaries. Capped at 50 creators. Highest algorithmic priority and founding equity status.</p>
+                </div>
+                <div class="badge-description-block green">
+                    <h3 style="color: #00C853; margin-bottom: 0.5rem;">Green: Investors</h3>
+                    <p style="font-size: 0.95rem;">Capital Partners. Pre-launch exclusivity. Permanent ownership signal and priority deal flow.</p>
+                </div>
+                <div class="badge-description-block blue">
+                    <h3 style="color: #2962FF; margin-bottom: 0.5rem;">Blue: Builders</h3>
+                    <p style="font-size: 0.95rem;">Engineers & Operators. Technical excellence and platform commitment. Infrastructure contributors.</p>
+                </div>
+                <div class="badge-description-block titanium">
+                    <h3 style="color: #B0BEC5; margin-bottom: 0.5rem;">Titanium: Networks</h3>
+                    <p style="font-size: 0.95rem;">Studios & Infrastructure. Studio-level authority. Priority access to vetted talent and early deal flow.</p>
                 </div>
             </div>
         </div>
@@ -209,15 +221,13 @@
                 <div class="chart-container">
                     <div class="chart-placeholder">
                         <h3>Vertical Video Consumption</h3>
-                        <p>Chart: Growth trajectory 2020-2024</p>
-                        <p style="font-size: 0.85rem; margin-top: 1rem; color: var(--muted);">Data visualization placeholder</p>
+                        <p>Market data coming soon</p>
                     </div>
                 </div>
                 <div class="chart-container">
                     <div class="chart-placeholder">
                         <h3>Creator Revenue Distribution</h3>
-                        <p>Chart: Platform revenue share comparison</p>
-                        <p style="font-size: 0.85rem; margin-top: 1rem; color: var(--muted);">Data visualization placeholder</p>
+                        <p>Market data coming soon</p>
                     </div>
                 </div>
             </div>
@@ -230,21 +240,18 @@
             <h2>FEATURED ORIGINALS</h2>
             <div class="grid grid-3">
                 <div class="poster-card">
-                    <div style="padding: 1rem; height: 100%; display: flex; flex-direction: column; justify-content: flex-end; background: linear-gradient(180deg, transparent 0%, rgba(0,0,0,0.8) 100%);">
-                        <h3 style="font-size: 1.2rem; margin-bottom: 0.5rem;">Series Title 1</h3>
-                        <p style="font-size: 0.9rem; color: var(--muted);">Director Name</p>
+                    <div style="padding: 1rem; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; background: var(--card);">
+                        <p style="color: var(--muted); text-align: center;">Original series coming soon</p>
                     </div>
                 </div>
                 <div class="poster-card">
-                    <div style="padding: 1rem; height: 100%; display: flex; flex-direction: column; justify-content: flex-end; background: linear-gradient(180deg, transparent 0%, rgba(0,0,0,0.8) 100%);">
-                        <h3 style="font-size: 1.2rem; margin-bottom: 0.5rem;">Series Title 2</h3>
-                        <p style="font-size: 0.9rem; color: var(--muted);">Director Name</p>
+                    <div style="padding: 1rem; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; background: var(--card);">
+                        <p style="color: var(--muted); text-align: center;">Original series coming soon</p>
                     </div>
                 </div>
                 <div class="poster-card">
-                    <div style="padding: 1rem; height: 100%; display: flex; flex-direction: column; justify-content: flex-end; background: linear-gradient(180deg, transparent 0%, rgba(0,0,0,0.8) 100%);">
-                        <h3 style="font-size: 1.2rem; margin-bottom: 0.5rem;">Series Title 3</h3>
-                        <p style="font-size: 0.9rem; color: var(--muted);">Director Name</p>
+                    <div style="padding: 1rem; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; background: var(--card);">
+                        <p style="color: var(--muted); text-align: center;">Original series coming soon</p>
                     </div>
                 </div>
             </div>
@@ -341,10 +348,8 @@
                 Live demo launching March/April.<br>
                 Full beta expected June with at least 50 creators.
             </p>
-            <!-- TODO: Replace with actual signup form URL -->
-            <a href="/demo/" class="btn" style="margin-right: 1rem;">Join Demo Waitlist</a>
-            <!-- TODO: Replace with actual Founding 50 application URL -->
-            <a href="/apply/" class="btn" style="background: transparent; border-color: #FFD700; color: #FFD700;">Apply for Founding 50</a>
+            <a href="https://vertikalapp.com/demo" class="btn" style="margin-right: 1rem;">Join Demo Waitlist</a>
+            <a href="https://vertikalapp.com/apply" class="btn" style="background: transparent; border-color: #FFD700; color: #FFD700;">Apply for Founding 50</a>
         </div>
     </div>
 </body>
