--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Demo | VERTIKAL</title>
+    <link rel="canonical" href="https://vertikalapp.com/demo">
     <style>
         :root {
             --bg: #050505; --card: #0a0a0a; --text: #ffffff; --muted: #888; --border: #222;
