--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VERTIKAL | Networks</title>
+    <link rel="canonical" href="https://networks.vertikalapp.com">
     <style>
         /* --- VERTIKAL CINEMATIC ENGINE --- */
         :root {
@@ -203,8 +204,7 @@
             <div class="chart-container" style="margin-top: 3rem;">
                 <div class="chart-placeholder">
                     <h3>Network Performance Metrics</h3>
-                    <p>Chart: Deal flow velocity and IP validation rates</p>
-                    <p style="font-size: 0.85rem; margin-top: 1rem; color: var(--muted);">Data visualization placeholder</p>
+                    <p>Performance data coming soon</p>
                 </div>
             </div>
         </div>
@@ -235,17 +235,19 @@
                 Live demo launching March/April.<br>
                 Full beta expected June with at least 50 creators.
             </p>
-            <!-- TODO: Replace with actual signup form URL -->
-            <a href="/demo/" class="btn" style="margin-right: 1rem;">Join Demo Waitlist</a>
-            <!-- TODO: Replace with actual Founding 50 application URL -->
-            <a href="/apply/" class="btn" style="background: transparent; border-color: #FFD700; color: #FFD700;">Apply for Founding 50</a>
+            <a href="https://vertikalapp.com/demo" class="btn" style="margin-right: 1rem;">Join Demo Waitlist</a>
+            <a href="https://vertikalapp.com/apply" class="btn" style="background: transparent; border-color: #FFD700; color: #FFD700;">Apply for Founding 50</a>
         </div>
     </div>
 
     <script>
-    document.getElementById('demoModal').addEventListener('click', function(e) {
+    // Demo Modal - show only once per user
+    const demoModal = document.getElementById('demoModal');
+    
+    demoModal.addEventListener('click', function(e) {
         if (e.target === this || e.target.classList.contains('close')) {
             this.classList.remove('active');
+            localStorage.setItem('demoModalShown', 'true');
         }
     });
     </script>
