CARD 1: Traffic Control & Stealth - _redirects, canonical tags, email fixes

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VERTIKAL | Cultural Ownership</title>
-    <link rel="canonical" href="https://vertikalapp.com">
+    <link rel="canonical" href="https://vertikalapp.com/">
     <style>
     /* VERTIKAL CINEMATIC ENGINE */
     :root {
