--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VERTIKAL | Creators</title>
-    <link rel="canonical" href="https://creators.vertikalapp.com">
+    <link rel="canonical" href="https://vertikalapp.com/creators">
     <style>
         /* --- VERTIKAL CINEMATIC ENGINE --- */
         :root {
