--- a/public/privacy.html
+++ b/public/privacy.html
@@ -38,7 +38,7 @@
     <p>You have the right to access, update, or delete your personal information at any time.</p>
     
     <h2>5. Contact Us</h2>
-    <p>For questions about this Privacy Policy, please contact us at privacy@vertikal.com</p>
+    <p>For questions about this Privacy Policy, please contact us at <a href="mailto:privacy@vertikalapp.com">privacy@vertikalapp.com</a></p>
 </body>
 </html>
 
