--- a/public/terms.html
+++ b/public/terms.html
@@ -41,7 +41,7 @@
     <p>VERTIKAL shall not be liable for any indirect, incidental, special, or consequential damages.</p>
     
     <h2>6. Contact Us</h2>
-    <p>For questions about these Terms, please contact us at legal@vertikal.com</p>
+    <p>For questions about these Terms, please contact us at <a href="mailto:legal@vertikalapp.com">legal@vertikalapp.com</a></p>
 </body>
 </html>
 
