MASTER PROMPT v3: Mission+Features, VIBE™ naming, CI/CD workflow, enhanced verification

--- a/public/index.html
+++ b/public/index.html
@@ -258,6 +258,30 @@
         </div>
     </section>
 
+    <!-- MISSION + 3 FEATURES -->
+    <section>
+        <div class="container">
+            <h2>MISSION</h2>
+            <p style="color: #fff; font-size: 1.3rem; margin-bottom: 3rem;">A home for Black creatives to create short-form vertical series, long-form, and documentary — with distribution + ownership upside.</p>
+            
+            <h2 style="margin-top: 4rem;">3 FEATURES</h2>
+            <div class="grid grid-3" style="margin-top: 2rem;">
+                <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--gold);">
+                    <h3 style="color: var(--gold); margin-bottom: 1rem;">Vertical Cinema Originals</h3>
+                    <p style="font-size: 1rem;">Premium short-form vertical series, long-form, and documentary content built for the 2–10 minute cinematic window.</p>
+                </div>
+                <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--blue);">
+                    <h3 style="color: var(--blue); margin-bottom: 1rem;">VIBE™ (VibeCode)</h3>
+                    <p style="font-size: 1rem;">Live overlay audience layer. Real-time comments flow over content, creating shared viewing experiences without interruption.</p>
+                </div>
+                <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--green);">
+                    <h3 style="color: var(--green); margin-bottom: 1rem;">V Badge System</h3>
+                    <p style="font-size: 1rem;">Trust + access + monetization paths. Signals contribution, priority, and ownership. Earned, not bought.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- FINAL CTA -->
     <section>
         <div class="container" style="text-align: center;">
