Fix placeholders, canonical URLs, add security headers, create source docs

--- a/public/index.html
+++ b/public/index.html
@@ -115,9 +115,9 @@
             <img src="/assets/Vertikal_Logo_Master.png" alt="VERTIKAL" class="logo-img">
         </a>
         <div class="nav-links">
-            <a href="/creators/">Creators</a>
-            <a href="/networks/">Networks</a>
-            <a href="/investors/">Investors</a>
+            <a href="https://creators.vertikalapp.com">Creators</a>
+            <a href="https://networks.vertikalapp.com">Networks</a>
+            <a href="https://investors.vertikalapp.com">Investors</a>
             <a href="#" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;" onclick="event.preventDefault(); document.getElementById('demoModal').classList.add('active');">Watch Live Demo</a>
         </div>
     </nav>
@@ -218,18 +218,6 @@
         <div class="container">
             <h2>THE MARKET</h2>
             <div class="grid grid-2">
-                <div class="chart-container">
-                    <div class="chart-placeholder">
-                        <h3>Vertical Video Consumption</h3>
-                        <p>Market data coming soon</p>
-                    </div>
-                </div>
-                <div class="chart-container">
-                    <div class="chart-placeholder">
-                        <h3>Creator Revenue Distribution</h3>
-                        <p>Market data coming soon</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -238,23 +226,6 @@
     <section>
         <div class="container">
             <h2>FEATURED ORIGINALS</h2>
-            <div class="grid grid-3">
-                <div class="poster-card">
-                    <div style="padding: 1rem; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; background: var(--card);">
-                        <p style="color: var(--muted); text-align: center;">Original series coming soon</p>
-                    </div>
-                </div>
-                <div class="poster-card">
-                    <div style="padding: 1rem; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; background: var(--card);">
-                        <p style="color: var(--muted); text-align: center;">Original series coming soon</p>
-                    </div>
-                </div>
-                <div class="poster-card">
-                    <div style="padding: 1rem; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; background: var(--card);">
-                        <p style="color: var(--muted); text-align: center;">Original series coming soon</p>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
 
