Fix badge violations: remove green references from creators/networks Mission sections

--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -272,8 +272,8 @@
                     <h3 style="color: var(--blue); margin-bottom: 1rem;">VIBE™ (VibeCode)</h3>
                     <p style="font-size: 1rem;">Live overlay audience layer. Real-time comments flow over content, creating shared viewing experiences without interruption.</p>
                 </div>
-                <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--green);">
-                    <h3 style="color: var(--green); margin-bottom: 1rem;">V Badge System</h3>
+                <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--gold);">
+                    <h3 style="color: var(--gold); margin-bottom: 1rem;">V Badge System</h3>
                     <p style="font-size: 1rem;">Trust + access + monetization paths. Signals contribution, priority, and ownership. Earned, not bought.</p>
                 </div>
             </div>
@@ -319,7 +319,7 @@
                 </div>
                 <div>
                     <h3 style="color: #fff;">2. The Season</h3>
-                    <p>Greenlit creators get distribution support to drop a full 6-10 episode season.</p>
+                    <p>Approved creators get distribution support to drop a full 6-10 episode season.</p>
                 </div>
                 <div>
                     <h3 style="color: #fff;">3. The Expansion</h3>
