--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -220,8 +220,8 @@
                     <h3 style="color: var(--blue); margin-bottom: 1rem;">VIBE™ (VibeCode)</h3>
                     <p style="font-size: 1rem;">Live overlay audience layer. Real-time comments flow over content, creating shared viewing experiences without interruption.</p>
                 </div>
-                <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--green);">
-                    <h3 style="color: var(--green); margin-bottom: 1rem;">V Badge System</h3>
+                <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--titanium);">
+                    <h3 style="color: var(--titanium); margin-bottom: 1rem;">V Badge System</h3>
                     <p style="font-size: 1rem;">Trust + access + monetization paths. Signals contribution, priority, and ownership. Earned, not bought.</p>
                 </div>
             </div>
