Fix verification: cache-busting, image-based badge checks, canonical improvements

--- a/public/index.html
+++ b/public/index.html
@@ -133,8 +133,9 @@
         </div>
     </header>
 
+    <!-- BADGE_SYSTEM_START -->
     <!-- V BADGE SYSTEM EXPLAINER (ALL BADGES) -->
-    <section>
+    <section id="badge-system">
         <div class="container">
             <h2>THE V BADGE SYSTEM</h2>
             <p style="color: #fff; font-size: 1.2rem; margin-bottom: 2rem;">The V Badge signals contribution, priority, and access. It is earned, not bought.</p>
