fix: A+ launch grade - cache rules docs, OG image SVG, demo route verified

--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://creators.vertikalapp.com">
     <meta property="og:title" content="Creators • Vertikal">
     <meta property="og:description" content="Build franchises, not followers. Join the Founding 50 and own your vertical cinema IP.">
-    <meta property="og:image" content="https://vertikalapp.com/assets/Vertikal_Logo_Master.png">
+    <meta property="og:image" content="https://vertikalapp.com/assets/og-preview.png">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://creators.vertikalapp.com">
     <meta name="twitter:title" content="Creators • Vertikal">
     <meta name="twitter:description" content="Build franchises, not followers. Join the Founding 50 and own your vertical cinema IP.">
-    <meta name="twitter:image" content="https://vertikalapp.com/assets/Vertikal_Logo_Master.png">
+    <meta name="twitter:image" content="https://vertikalapp.com/assets/og-preview.png">
     <style>
         /* GOLD THEME */
         :root {
