--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://vertikalapp.com/demo">
     <meta property="og:title" content="Platform Demo • VERTIKAL">
     <meta property="og:description" content="See how the Vertikal engine works. The closed-loop economy for cinematic IP.">
-    <meta property="og:image" content="https://vertikalapp.com/assets/Vertikal_Logo_Master.png">
+    <meta property="og:image" content="https://vertikalapp.com/assets/og-preview.png">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://vertikalapp.com/demo">
     <meta name="twitter:title" content="Platform Demo • VERTIKAL">
     <meta name="twitter:description" content="See how the Vertikal engine works. The closed-loop economy for cinematic IP.">
-    <meta name="twitter:image" content="https://vertikalapp.com/assets/Vertikal_Logo_Master.png">
+    <meta name="twitter:image" content="https://vertikalapp.com/assets/og-preview.png">
     
     <style>
         /* --- VERTIKAL CINEMATIC ENGINE --- */
