--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://vertikalapp.com">
     <meta property="og:title" content="VERTIKAL | Cultural Ownership">
     <meta property="og:description" content="Vertikal is the vertical-first cinematic ecosystem. Built for retention, franchise IP, and Black cultural ownership.">
-    <meta property="og:image" content="https://vertikalapp.com/assets/Vertikal_Logo_Master.png">
+    <meta property="og:image" content="https://vertikalapp.com/assets/og-preview.png">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://vertikalapp.com">
     <meta name="twitter:title" content="VERTIKAL | Cultural Ownership">
     <meta name="twitter:description" content="Vertikal is the vertical-first cinematic ecosystem. Built for retention, franchise IP, and Black cultural ownership.">
-    <meta name="twitter:image" content="https://vertikalapp.com/assets/Vertikal_Logo_Master.png">
+    <meta name="twitter:image" content="https://vertikalapp.com/assets/og-preview.png">
     <style>
     /* VERTIKAL CINEMATIC ENGINE */
     :root {
