--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://investors.vertikalapp.com">
     <meta property="og:title" content="VERTIKAL | Investors">
     <meta property="og:description" content="Capitalizing on the rotation. Cinema isn't dying; it's rotating 90 degrees. Vertikal is scalable media infrastructure for Black cultural ownership.">
-    <meta property="og:image" content="https://vertikalapp.com/assets/Vertikal_Logo_Master.png">
+    <meta property="og:image" content="https://vertikalapp.com/assets/og-preview.png">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://investors.vertikalapp.com">
     <meta name="twitter:title" content="VERTIKAL | Investors">
     <meta name="twitter:description" content="Capitalizing on the rotation. Cinema isn't dying; it's rotating 90 degrees. Vertikal is scalable media infrastructure for Black cultural ownership.">
-    <meta name="twitter:image" content="https://vertikalapp.com/assets/Vertikal_Logo_Master.png">
+    <meta name="twitter:image" content="https://vertikalapp.com/assets/og-preview.png">
     <style>
         /* --- VERTIKAL CINEMATIC ENGINE --- */
         :root {
