--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://networks.vertikalapp.com">
     <meta property="og:title" content="VERTIKAL | Networks">
     <meta property="og:description" content="Media infrastructure, not just playlists. Studio-grade engines powering the short-series economy with faster deal flow and validated IP.">
-    <meta property="og:image" content="https://vertikalapp.com/assets/Vertikal_Logo_Master.png">
+    <meta property="og:image" content="https://vertikalapp.com/assets/og-preview.png">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://networks.vertikalapp.com">
     <meta name="twitter:title" content="VERTIKAL | Networks">
     <meta name="twitter:description" content="Media infrastructure, not just playlists. Studio-grade engines powering the short-series economy with faster deal flow and validated IP.">
-    <meta name="twitter:image" content="https://vertikalapp.com/assets/Vertikal_Logo_Master.png">
+    <meta name="twitter:image" content="https://vertikalapp.com/assets/og-preview.png">
     <style>
         /* --- VERTIKAL CINEMATIC ENGINE --- */
         :root {
