fix: content polish - badge assets, job workflow, investor copy, CTA routes

--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -160,6 +160,30 @@
         </div>
     </section>
 
+    <section class="vk-section">
+        <div class="container">
+            <h2 style="border-color: var(--gold);">THE JOB-POSTING WORKFLOW</h2>
+            <div class="grid-2" style="margin-top: 2rem;">
+                <div class="feature-card" style="border-left: 4px solid var(--gold);">
+                    <h3 style="color: var(--gold);">Step 1: Post Your Role</h3>
+                    <p>Create a job posting directly from your creator profile. Specify role, project, and requirements. Your V Badge status determines visibility and reach.</p>
+                </div>
+                <div class="feature-card" style="border-left: 4px solid var(--gold);">
+                    <h3 style="color: var(--gold);">Step 2: Review Applications</h3>
+                    <p>Viewer-crew members apply with their Vertikal profile. See their credits, portfolio, and verified work history. Filter by experience level and specialization.</p>
+                </div>
+                <div class="feature-card" style="border-left: 4px solid var(--gold);">
+                    <h3 style="color: var(--gold);">Step 3: Hire & Credit</h3>
+                    <p>Select your crew. Their work is automatically credited to your project. Build your team's reputation and unlock higher-tier opportunities together.</p>
+                </div>
+                <div class="feature-card" style="border-left: 4px solid var(--gold);">
+                    <h3 style="color: var(--gold);">Step 4: Build Your Network</h3>
+                    <p>Every collaboration strengthens your profile. Crew members become part of your verified network. Turn viewers into permanent production partners.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <div class="ticker-wrap">
         <div class="ticker">
             <div class="ticker-item">FOUNDING MEMBER 01: RESERVED //</div>
