--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -134,16 +134,10 @@
         <div class="container">
             <h2>EARLY CAPITAL RECOGNITION</h2>
             <div class="badge-row">
-                <img src="/assets/badges/investors-badge-green.jpg" alt="Green Investor Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
+                <img src="/assets/img/badge-investor.jpg" alt="Green Investor Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--green);">Green Investor Badge</h3>
-                    <p style="margin:0; font-size: 1.1rem;"><strong>Pre-launch exclusivity. Permanent ownership signal.</strong> Early institutional partners only. Grants priority deal flow and permanent equity recognition. Not available post-launch. Represents ownership leverage.</p>
-                    <ul style="margin-top: 1rem; padding-left: 1.5rem; color: var(--muted); list-style: none;">
-                        <li style="margin-bottom: 0.5rem;">• Priority access to validated IP pipeline</li>
-                        <li style="margin-bottom: 0.5rem;">• Permanent equity recognition</li>
-                        <li style="margin-bottom: 0.5rem;">• Early deal flow on licensing opportunities</li>
-                        <li style="margin-bottom: 0.5rem;">• Pre-launch exclusivity (not available post-launch)</li>
-                    </ul>
+                    <p style="margin:0; font-size: 1.1rem;">Pre-launch exclusivity. Permanent ownership signal. Early institutional partners only. Grants priority deal flow and permanent equity recognition. Not available post-launch.</p>
                 </div>
             </div>
         </div>
