--- a/public/beta/index.html
+++ b/public/beta/index.html
@@ -88,6 +88,9 @@
     </style>
 </head>
 <body>
+<div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
+  CINEMA ISN'T DYING — IT'S ROTATING
+</div>
 
     <nav>
         <a href="https://vertikalapp.com" style="font-weight: 900; letter-spacing: 0.1em; color: #fff; text-decoration: none; display: flex; align-items: center;">
@@ -106,7 +109,7 @@
     <section class="container" style="text-align: center; padding-top: 8rem;">
         <h1 class="hero-text">INSIDE THE ENGINE.</h1>
         <p style="margin: 0 auto 2rem auto; font-size: 1.3rem; color: #fff;">You are standing on the ground floor. This is a preview of the operating system for Black ownership.</p>
-        <a href="mailto:beta@vertikalapp.com?subject=TestFlight%20Access" class="btn" style="background: #fff; color: #000;">Download Demo (TestFlight)</a>
+        <a href="/download/" class="btn" style="background: #fff; color: #000;">Download Beta (TestFlight)</a>
     </section>
 
     <section>
