--- a/public/cmo_strategy/cmo_strategy:index.html
+++ b/public/cmo_strategy/cmo_strategy:index.html
@@ -20,6 +20,9 @@
     </style>
 </head>
 <body>
+<div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
+  CINEMA ISN'T DYING — IT'S ROTATING
+</div>
 
     <nav class="fixed top-0 w-full p-6 flex justify-between z-50">
         <div class="font-bold tracking-widest">CMO BRIEFING</div>
