--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -89,6 +89,9 @@
     </style>
 </head>
 <body>
+<div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
+  CINEMA ISN'T DYING — IT'S ROTATING
+</div>
     <nav>
         <a href="/" style="font-weight: 900; color: #fff; text-decoration: none; display: flex; align-items: center;">
             <img src="/assets/Vertikal_Logo_Master.png" alt="VERTIKAL" style="height: 40px; width: auto; margin-right: 0.5rem;">
@@ -144,14 +147,14 @@
         <div class="container">
             <h2 style="border-color: var(--gold);">EXCLUSIVE ACCESS</h2>
             <div class="badge-row" style="border-left: 4px solid var(--gold);">
-                <img src="/assets/img/badge-gold.jpg" alt="Gold V Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
+                <img src="/assets/badges/badge-gold.jpg" alt="Gold V Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--gold);">The Founding 50 (Gold)</h3>
                     <p style="margin:0;">Reserved for the first 50 creators. Highest equity. Defines the platform standard.</p>
                 </div>
             </div>
             <div class="badge-row" style="border-left: 4px solid var(--blue);">
-                <img src="/assets/img/badge-visionary.jpg" alt="Visionary Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
+                <img src="/assets/badges/badge-visionary.jpg" alt="Visionary Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--blue);">The Visionary (Blue)</h3>
                     <p style="margin:0;">For early builders who see the shift. Grants access to beta tools and feedback loops.</p>
