--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -83,6 +83,9 @@
     </style>
 </head>
 <body>
+<div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
+  CINEMA ISN'T DYING — IT'S ROTATING
+</div>
 
     <nav>
         <a href="https://vertikalapp.com" class="logo-link">
@@ -134,7 +137,7 @@
         <div class="container">
             <h2>EARLY CAPITAL RECOGNITION</h2>
             <div class="badge-row">
-                <img src="/assets/img/badge-investor.jpg" alt="Green Investor Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
+                <img src="/assets/badges/badge-investor.jpg" alt="Green Investor Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--green);">Green Investor Badge</h3>
                     <p style="margin:0; font-size: 1.1rem;">Pre-launch exclusivity. Permanent ownership signal. Early institutional partners only. Grants priority deal flow and permanent equity recognition. Not available post-launch.</p>
