--- a/public/networks/success.html
+++ b/public/networks/success.html
@@ -11,6 +11,9 @@
   </style>
 </head>
 <body class="min-h-[100dvh] flex items-center justify-center p-6">
+<div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
+  CINEMA ISN'T DYING — IT'S ROTATING
+</div>
   <div class="max-w-md w-full rounded-2xl border border-white/10 bg-white/5 p-8 text-center">
     <div class="text-[11px] tracking-[0.25em] text-blue-300 font-extrabold">SUBMITTED</div>
     <h1 class="text-3xl font-black mt-3 mb-3">Application Received</h1>
