--- a/public/profiles/index.html
+++ b/public/profiles/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 <body>
+<div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
+  CINEMA ISN'T DYING — IT'S ROTATING
+</div>
 
 <header class="vk-header">
   <a href="https://vertikalapp.com" class="vk-logo-link">
