--- a/public/terms.html
+++ b/public/terms.html
@@ -22,6 +22,9 @@
     </style>
 </head>
 <body>
+<div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
+  CINEMA ISN'T DYING — IT'S ROTATING
+</div>
     <h1>Terms of Service</h1>
     <p class="last-updated">Last Updated: December 13, 2024</p>
     
