--- a/public/creators/dashboard/index.html
+++ b/public/creators/dashboard/index.html
@@ -389,6 +389,9 @@
     </style>
 </head>
 <body>
+<div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
+  CINEMA ISN'T DYING — IT'S ROTATING
+</div>
     <!-- Loading Screen -->
     <div class="loading-screen" id="loadingScreen">
         <div class="loading-logo">VERTIKAL</div>
