--- a/public/cto_deck/cto_deck:index.html
+++ b/public/cto_deck/cto_deck:index.html
@@ -27,6 +27,9 @@
     </style>
 </head>
 <body>
+<div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
+  CINEMA ISN'T DYING — IT'S ROTATING
+</div>
 
     <div class="scanline"></div>
 
