--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -84,6 +84,9 @@
     </style>
 </head>
 <body>
+<div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
+  CINEMA ISN'T DYING — IT'S ROTATING
+</div>
 
     <nav>
         <a href="https://vertikalapp.com" class="logo-link">
@@ -140,7 +143,7 @@
         <div class="container">
             <h2>THE TITANIUM ADVANTAGE</h2>
             <div class="badge-row">
-                <img src="/assets/img/badge-titanium.jpg" alt="Titanium Network Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
+                <img src="/assets/badges/badge-titanium.jpg" alt="Titanium Network Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--titanium);">Titanium Network Partner</h3>
                     <p style="margin:0; font-size: 1.1rem;"><strong>Studio-Level Authority.</strong> This badge signals you are a content factory. Priority access to vetted talent. Early deal flow. Pipeline control. When brands see Titanium, they know you deliver.</p>
