--- a/public/series/index.html
+++ b/public/series/index.html
@@ -26,6 +26,9 @@
     </style>
 </head>
 <body>
+<div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
+  CINEMA ISN'T DYING — IT'S ROTATING
+</div>
     <nav>
         <a href="https://vertikalapp.com" class="logo-link">
             <img src="/assets/Vertikal_Logo_Master.png" alt="VERTIKAL" class="logo-img">
