--- a/public/terms/index.html
+++ b/public/terms/index.html
@@ -23,6 +23,9 @@
     </style>
 </head>
 <body>
+<div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
+  CINEMA ISN'T DYING — IT'S ROTATING
+</div>
     <div class="container">
         <a href="/" class="back">← Back to Home</a>
         <h1>TERMS OF SERVICE</h1>
